--- a/index.html
+++ b/index.html
@@ -1,37 +1,23 @@
 <!DOCTYPE html>
-<html lang="">
-
+<html lang="ko">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my COMP1720 sketch</title>
-    <style> body {padding: 0; margin: 0; overflow: hidden} </style>
-
-	<!-- this is the main p5 library -->
-	<script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
-
-	<!-- this is the p5 sound library -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/addons/p5.sound.js"></script> -->
-
-
-	<!--
-		 Note: if you have no access to the internet, the cdnjs.cloudflare.com links
-		 above (and therefore your sketch) won't work.
-
-		 If you want to be able to work offline, you will need to download the p5
-		 libraries (e.g. from https://p5js.org/download/ and place them in a `lib`
-		 folder in this project. Then, you can remove the <script> tags above and replace
-		 them with the (currently commented-out) ones below:
-
-		 <script src="lib/p5/p5.js"></script>
-		 <script src="lib/p5/addons/p5.sound.js"></script>
-		 -->
-
-	<!-- here's where we include the actual sketch file -->
-	<script src="sketch.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>gitgutgit fullstack basic</title>
   </head>
-
   <body>
+    <h1>gitgutgit의 Python guideline Repository list</h1>
+    <ul>
+      <li>
+        <a href="https://github.com/gitgutgit/MiddleWarePython"
+          >MiddleWarePython</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/gitgutgit/simple_mongodb">simple_mongodb</a>
+      </li>
+      <!-- add more -->
+      <li><a href="p5sketch.html" target="_blank">p5.js sketch</a></li>
+    </ul>
   </body>
-
 </html>
