--- a/p5sketch.html
+++ b/p5sketch.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="">
-
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my COMP1720 sketch</title>
-    <style> body {padding: 0; margin: 0; overflow: hidden} </style>
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+      }
+    </style>
 
-	<!-- this is the main p5 library -->
-	<script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
+    <!-- this is the main p5 library -->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
 
-	<!-- this is the p5 sound library -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/addons/p5.sound.js"></script> -->
+    <!-- this is the p5 sound library -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/addons/p5.sound.js"></script> -->
 
-
-	<!--
+    <!--
 		 Note: if you have no access to the internet, the cdnjs.cloudflare.com links
 		 above (and therefore your sketch) won't work.
 
@@ -27,11 +31,9 @@
 		 <script src="lib/p5/addons/p5.sound.js"></script>
 		 -->
 
-	<!-- here's where we include the actual sketch file -->
-	<script src="sketch.js"></script>
+    <!-- here's where we include the actual sketch file -->
+    <script src="sketch.js"></script>
   </head>
 
-  <body>
-  </body>
-
+  <body></body>
 </html>
