--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>gitgutgit fullstack basic</title>
   </head>
   <body>
-    <h1>gitgutgit의 Python guideline Repository list</h1>
+    <h1>gitgutgit's Python guideline Repository list</h1>
     <ul>
       <li>
         <a href="https://github.com/gitgutgit/MiddleWarePython"
