add some more links

--- a/index.html
+++ b/index.html
@@ -1,23 +1,67 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gitgutgit fullstack basic</title>
+    <title>gitgutgit Fullstack Basic</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>gitgutgit's Python guideline Repository list</h1>
-    <ul>
-      <li>
-        <a href="https://github.com/gitgutgit/MiddleWarePython"
-          >MiddleWarePython</a
-        >
-      </li>
-      <li>
-        <a href="https://github.com/gitgutgit/simple_mongodb">simple_mongodb</a>
-      </li>
-      <!-- add more -->
-      <li><a href="p5sketch.html" target="_blank">p5.js sketch</a></li>
-    </ul>
+    <h1>gitgutgit's Repository List</h1>
+
+    <section>
+      <h2>LLM application</h2>
+      <ul>
+        <li>
+          <a href="https://github.com/gitgutgit/CustomAiChatBot"
+            >CustomAIChatBot</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/gitgutgit/AnalysisAiBot">AnaylsisAiBot</a>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Python Backend</h2>
+      <ul>
+        <li>
+          <a href="https://github.com/gitgutgit/MiddleWarePython"
+            >MiddleWarePython</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/gitgutgit/simple_mongodb"
+            >simple_mongodb</a
+          >
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Frontend</h2>
+      <ul>
+        <!-- Add frontend-related repositories here -->
+      </ul>
+    </section>
+
+    <section>
+      <h2>Miscellaneous</h2>
+      <ul>
+        <li>
+          <a href="p5sketch.html" target="_blank"
+            >p5.js Sketch(freshman first single project)</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://github.com/gitgutgit/gitignoreExample"
+            target="_blank"
+            >gitignoreExample</a
+          >
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
