add one more link

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       <h2>Frontend</h2>
       <ul>
         <!-- Add frontend-related repositories here -->
+        <li>
+          <a href="https://github.com/gitgutgit/Crime-insight">Crime-insight</a>
+        </li>
       </ul>
     </section>
 
