--- a/index.html
+++ b/index.html
@@ -44,12 +44,19 @@
       <ul>
         <!-- Add frontend-related repositories here -->
         <li>
-          <a href = "https://crime-insight-deploy.onrender.com">Crime-insight-deploy</a>
-            Username: Jane Doe Username: jane.doe@example.com  (to login)
+          <a href="https://crime-insight-deploy.onrender.com">Crime-insight-deploy</a>
+          <br>
+          <span>Username: Jane Doe</span>
+          <br>
+          <span>Email: jane.doe@example.com</span>
+          <br>
+          <small>(It may take a while to connect for the first time)</small>
+          <br>
           <a href="https://github.com/gitgutgit/Crime-insight">Crime-insight-sourcecode</a>
         </li>
       </ul>
     </section>
+    
 
     <section>
       <h2>Miscellaneous</h2>
