--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <section>
       <h2>Frontend</h2>
       <ul>
+        <a href = "https://deluxe-pyrite-976.notion.site/Vanila-Js-a7b32b1cf6064225b9cb7fdb859bb836"> Frontend-basic-note(Notion)</a>
         <!-- Add frontend-related repositories here -->
         <li>
           <a href="https://crime-insight-deploy.onrender.com">Crime-insight-deploy</a>
