--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jeewon Kim — Personal Site</title>
-  <meta name="description" content="Jeewon Kim — CS @ Columbia. Full‑stack developer focused on AI systems, distributed apps, and social impact projects." />
+  <meta name="description" content="Jeewon Kim — CS @ Columbia University. Full‑stack developer focused on AI systems, distributed apps, and social impact projects." />
   <link rel="stylesheet" href="styles.css" />
   <script type="application/ld+json">
   {
@@ -15,7 +15,6 @@
     "affiliation": {"@type": "CollegeOrUniversity", "name": "Columbia University"},
     "url": "https://github.com/gitgutgit",
     "email": "mailto:jk4864@columbia.edu",
-    "telephone": "+1-646-659-3829",
     "address": {"@type": "PostalAddress", "addressLocality": "Fort Lee", "addressRegion": "NJ", "addressCountry": "US"}
   }
   </script>
@@ -24,9 +23,9 @@
   <div class="wrap">
     <div class="container grid">
       <header class="hero">
-        <span class="badge">Open to Internships & Projects</span>
+        <span class="badge">Seeking Full-Time Opportunities</span>
         <h1>Jeewon Kim</h1>
-        <p class="lead">CS @ Columbia (GPA 3.82 · May 2026). Full‑stack developer focused on <strong>AI systems</strong>, <strong>distributed apps</strong>, and <strong>social impact</strong> products. Previously at Generous Health and TVCF; founder of Tchelp.org.</p>
+        <p class="lead">CS @ Columbia (GPA 3.82 · May 2026). Full‑stack developer focused on <strong>AI systems</strong>, <strong>distributed apps</strong>, and <strong>social impact</strong> products. <br>Previously at Generous Health and TVCF, and founder of Tchelp.org.</p>
         <div class="actions">
           <a class="btn primary" href="mailto:jk4864@columbia.edu">Email Me</a>
           <a class="btn" href="https://github.com/gitgutgit" target="_blank" rel="noopener">GitHub</a>
@@ -61,6 +60,7 @@
             <ul class="list">
               <li>Personalized recommendation pipeline and scalable endpoints.</li>
             </ul>
+            <p><a href="https://github.com/Gnosis-Media" target="_blank" rel="noopener">Visit repos</a></p>
           </article>
         </div>
       </section>
@@ -133,7 +133,7 @@
             <div>
               <a href="mailto:jk4864@columbia.edu">jk4864@columbia.edu</a>
               <div>Fort Lee, NJ · United States</div>
-              <div><a href="https://github.com/gitgutgit" target="_blank" rel="noopener">github.com/gitgutgit</a></div>
+              <div>Mygithub: <a href="https://github.com/gitgutgit" target="_blank" rel="noopener">github.com/gitgutgit</a></div>
             </div>
           </div>
         </aside>
@@ -176,7 +176,7 @@
       </section>
 
       <footer>
-        <div>© <span id="year"></span> Jeewon Kim — Built with HTML/CSS. Deployed on Vercel.</div>
+        <div>© <span id="year"></span> Jeewon Kim — Built with HTML/CSS. Deployed on Github</div>
       </footer>
     </div>
   </div>
